Use secrets for Docker credentials in CI workflow

--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -8,7 +8,7 @@
     # Tag for repository
     tag: 
     # Put docker user name here
-    docker-username: DOCKER
+    docker-username: {{ $secrets.DOCKER_USERNAME }}
     # Password for docker username
-    docker-password: 
+    docker-password: {{ $secrets.DOCKER_PASSWORD }}
           
