--- a/.github/workflows/dockercompose.yml
+++ b/.github/workflows/dockercompose.yml
@@ -1,4 +1,5 @@
 version: "3.9"
+
 services:
   db:
     image: postgres:15
@@ -11,9 +12,11 @@ services:
       - db_data:/var/lib/postgresql/data
     networks:
       - app-network
+
   backend:
     build: .
     container_name: node_backend
+    restart: always
     environment:
       DB_HOST: db
       DB_USER: postgres
@@ -23,18 +26,22 @@ services:
       - db
     networks:
       - app-network
+
   nginx:
     image: nginx:alpine
     container_name: nginx_proxy
+    restart: always
     ports:
       - "80:80"
     volumes:
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
     depends_on:
       - backend
     networks:
       - app-network
+
 volumes:
   db_data:
+
 networks:
   app-network:
