--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -1,15 +1,40 @@
-- name: CI - Docker: Build and Push action
-  uses: NRO04/docker-build-push-action@v2
-  with:
-    # Name of the repository (e.g., username/app-name)
-    name-repository: your-dockerhub-username/your-app-name
+name: CI - Build and Push Docker Image
 
-    # Tag for the image (e.g., latest or from a GitHub variable)
-    tag: latest
+on:
+  push:
+    branches:
+      - main
+  workflow_dispatch:
 
-    # Docker Hub credentials
-    docker-username: ${{ secrets.DOCKER_USERNAME }}
-    docker-password: ${{ secrets.DOCKER_PASSWORD }}
+jobs:
+  build-and-push:
+    runs-on: ubuntu-latest
 
-    # SSH host (optional)
-    ssh_host: 160.187.167.92
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build and Push Docker Image
+        uses: NRO04/docker-build-push-action@v2
+        with:
+          # Your Docker Hub repository name
+          name-repository: ${{ secrets.DOCKER_USERNAME }/nginx
+
+          # Image tag (use 'latest' or Git commit SHA for versioning)
+          tag: latest
+
+          # Docker credentials
+          docker-username: ${{ secrets.DOCKER_USERNAME }}
+          docker-password: ${{ secrets.DOCKER_PASSWORD }}
+
+          # Optional SSH host (only if deployment via SSH is required)
+          ssh_host: 160.187.167.92
