--- a/.github/workflows/dockercompose.yml
+++ b/.github/workflows/dockercompose.yml
@@ -1,47 +1,54 @@
-version: "3.9"
+name: CI/CD - Build, Push and Deploy Docker Image
 
-services:
-  db:
-    image: postgres:15
-    restart: always
-    environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: mydb
-    volumes:
-      - db_data:/var/lib/postgresql/data
-    networks:
-      - app-network
+on:
+  push:
+    branches:
+      - main
+  workflow_dispatch:
 
-  backend:
-    build: .
-    container_name: node_backend
-    restart: always
-    environment:
-      DB_HOST: db
-      DB_USER: postgres
-      DB_PASSWORD: postgres
-      DB_NAME: mydb
-    depends_on:
-      - db
-    networks:
-      - app-network
+jobs:
+  build-push-deploy:
+    runs-on: ubuntu-latest
 
-  nginx:
-    image: nginx:alpine
-    container_name: nginx_proxy
-    restart: always
-    ports:
-      - "80:80"
-    volumes:
-      - ./nginx/default.conf:/etc/nginx/conf.d/con.conf:ro
-    depends_on:
-      - backend
-    networks:
-      - app-network
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-volumes:
-  db_data:
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
-networks:
-  app-network:
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build and Push Docker Image
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          push: true
+          tags: your-dockerhub-username/your-app-name:latest
+
+      - name: SSH into server and deploy
+        uses: appleboy/ssh-action@v1.0.3
+        with:
+          host: 160.187.167.92
+          username: ${{ secrets.SSH_USERNAME }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          port: 22
+          script: |
+            echo "Pulling latest Docker image..."
+            docker pull your-dockerhub-username/your-app-name:latest
+
+            echo "Stopping and removing old container..."
+            docker stop your-app-name || true
+            docker rm your-app-name || true
+
+            echo "Starting new container..."
+            docker run -d \
+              --name your-app-name \
+              -p 80:80 \
+              ${{ secrets.DOCKER_USERNAME }}/nginx:latest
+
+            echo "Deployment complete ✅"
