--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -1,4 +1,4 @@
-name: CI - Build and Push Docker Image
+name: CI/CD - Build, Push and Deploy Docker Image
 
 on:
   push:
@@ -7,7 +7,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  build-and-push:
+  build-push-deploy:
     runs-on: ubuntu-latest
 
     steps:
@@ -24,17 +24,22 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build and Push Docker Image
-        uses: NRO04/docker-build-push-action@v2
+        uses: docker/build-push-action@v6
         with:
-          # Your Docker Hub repository name
-          name-repository: ${{ secrets.DOCKER_USERNAME }}/nginx
+          context: .
+          push: true
+          tags: your-dockerhub-username/your-app-name:latest
 
-          # Image tag (use 'latest' or Git commit SHA for versioning)
-          tag: latest
-
-          # Docker credentials
-          docker-username: ${{ secrets.DOCKER_USERNAME }}
-          docker-password: ${{ secrets.DOCKER_PASSWORD }}
-
-          # Optional SSH host (only if deployment via SSH is required)
-          ssh_host: 160.187.167.92
+      - name: Deploy on Remote Server
+        uses: appleboy/ssh-action@v1.0.3
+        with:
+          host: 160.187.167.92
+          username: ${{ secrets.SSH_USERNAME }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          script: |
+            echo "Pulling latest image..."
+            docker pull your-dockerhub-username/your-app-name:latest
+            echo "Restarting container..."
+            docker compose -f /path/to/your/docker-compose.yml down
+            docker compose -f /path/to/your/docker-compose.yml up -d
+            echo "✅ Deployment complete!"
